# IIC

./: README.md  Soundsscrips.js  index.html
api/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.debug  Dockerfile.init  Dockerfile.release  Dockerfile.test  Rocket.toml  docker-build.sh  gen_secretkey.sh
api/cache/media/: 47984  48002  48010
api/cache/posts/: 2023-05-23
api/lib/cache-lib/: Cargo.toml
api/lib/mebis-lib/: Cargo.toml
api/lib/wp-lib/: Cargo.toml
api/migrations/2023-01-01-115233_ApiKey/: up.sql
api/migrations/2023-02-20-093636_Umfrage/: down.sql  up.sql
api/migrations/2023-02-20-093642_Medien/: down.sql  up.sql
api/migrations/2023-02-20-093651_TParameter/: down.sql  up.sql
api/migrations/2023-02-20-093656_TemplateTParameter/: down.sql  up.sql
api/migrations/2023-02-20-093706_Benutzer/: down.sql  up.sql
api/migrations/2023-02-20-093710_UFrage/: up.sql
api/migrations/2023-02-20-093715_UAntwort/: down.sql  up.sql
api/migrations/2023-02-20-093723_UFrageUAntwort/: down.sql  up.sql
api/migrations/2023-02-20-093745_UmfrageBenutzer/: down.sql
api/migrations/2023-02-20-093752_Umfrageantwort/: down.sql  up.sql
api/migrations/2023-02-20-093803_ArtikelAutor/: up.sql
api/migrations/2023-03-17-233510_sspiel/: down.sql  up.sql
api/migrations/2023-03-17-233515_team/: down.sql  up.sql
api/migrations/2023-03-17-233516_mspiel/: down.sql  up.sql
api/migrations/2023-03-17-233531_sspieler/: down.sql  up.sql
api/migrations/2023-03-17-233535_mspieler/: down.sql  up.sql
api/migrations/2023-03-17-233552_benutzerteam/: up.sql
api/migrations/2023-04-01-114043_ArtikelMedien/: up.sql
api/migrations/2023-04-01-115654_Berechtigung/: down.sql  up.sql
api/migrations/2023-04-01-115703_BenutzerBerechtigung/: down.sql
api/migrations/2023-04-01-151015_UmfrageUFrage/: up.sql
api/music/: playlist.m3u
api/revealjs/: demo.html  index.html
api/src/: admin.rs  catchers.rs  main.rs  schema.rs  tests.rs  user.rs
api/src/api/: del.rs  edit.rs  get.rs  get_all.rs  mod.rs  models_new.rs  new.rs  wordpress.rs
api/src/db/: mod.rs  utils.rs
api/src/feedback/: mod.rs  runde1.rs
api/src/utils/: api_permissions.rs  apikey.rs  cookies.rs  from.rs  mod.rs
api/static/: index.html.tera
api/static/css/: confetti.css  main.css
api/static/simonsays/: index.html
api/templates/: home.html.tera  idle.html.tera  iframe.html.tera
api/templates/admin/: dashboard.html.tera
api/templates/errors/: 401.html.tera  500.html.tera  nopin.html.tera
api/templates/games/: Knopf.html  Schachrätsel  tictactoe.html
api/templates/placeholders/: benutzer.html.tera  games.html.tera  lehrer.html.tera  loginfail.html.tera  wordpress.html.tera
api/templates/sites/: idle.html.tera
api/templates/user/: loggedin.html.tera  login.html.tera  loginfail.html.tera
api/v1/: .env  Cargo.toml  Rocket.toml  del.rs  edit.rs  new.rs
api/v1/certs/: cert.pem  key.pem  new.sh
api/v1/postgres/: docker-compose.yml
api/v1/src/: main.rs  schema.rs
api/v1/templates/: index.html.tera
server/: .env  .gitignore  Cargo.toml
server/docker-dev/: docker-compose.yml
server/frontend/presentation-templates/: .gitignore
server/frontend/revealjs/: demo.html
server/libs/actix-web-ext_proc-macro/: Cargo.toml
server/libs/diesel-ext_traits/: Cargo.toml
server/libs/wp-lib/: Cargo.toml
server/migrations/00000000000003_artikel/: up.sql
server/migrations/00000000000004_artikel-benutzer/: down.sql  up.sql
server/migrations/00000000000006_artikel-medien/: down.sql
server/migrations/00000000000007_parameter/: down.sql  up.sql
server/migrations/00000000000008_template-parameter/: up.sql
server/migrations/00000000000009_apikey/: down.sql  up.sql
server/migrations/00000000000013_mspiel/: down.sql  up.sql
server/migrations/00000000000014_match-mspiel/: down.sql  up.sql
server/migrations/00000000000016_sspiel/: down.sql  up.sql
server/migrations/00000000000017_benutzer-sspiel/: down.sql  up.sql
server/migrations/00000000000018_umfrage/: down.sql
server/migrations/00000000000019_frage/: down.sql  up.sql
server/migrations/00000000000020_antwort/: down.sql  up.sql
server/migrations/00000000000021_frage-antwort/: down.sql  up.sql
server/migrations/00000000000023_umfrage-benutzer-frage/: up.sql
server/migrations/00000000000024_umfrage-frage/: up.sql  (+1 more)
server/src/: main.rs  stati.rs
(+297 files in other folders)
