[package]
name = "api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["secrets", "json", "tls"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = { version = "1.0.159" }
#serde_rusqlite = { version = "0.31.0" }

diesel = { version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15"
rand = "0.8.5"
tera = "1"

rocket-multipart-form-data = "0.10.5"

wp-lib = { path = "./lib/wp-lib" }
#mebis-lib = { path = "./lib/mebis-lib" }
cache-lib = { path = "./lib/cache-lib" }


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]

[dependencies.rocket_contrib]
version = "0.4.11-rc.2"
features = ["json"]
