[package]
name = "actix-web-ext_proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deluxe = "0.5.0"
quote = "1.0.33"
syn = "2.0.38"
proc-macro2 = "1.0.69"
paste = "1.0.14"

[lib]
proc-macro=true
