[package]
name = "diesel-ext_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["postgres"]}

diesel-ext_insertable_proc-macro = { path = "diesel-ext_insertable_proc-macro" }
diesel-ext_queryable_proc-macro = { path = "diesel-ext_queryable_proc-macro" }
diesel-ext_checkable_proc-macro = { path = "diesel-ext_checkable_proc-macro" }
diesel-ext_connection_proc-macro = { path = "diesel-ext_connection_proc-macro" }